--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "workerhub",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://worker-hub.herokuapp.com/",
+  "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "json-server": "^0.17.0",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +21,7 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
